# raspberry-pi-test

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  test.cpp
include/: transfer_protocol.hpp  verification_algorithm.hpp
